tests/ui/async-await/in-trait/dont-project-to-specializable-projection.current.stderr
error: async associated function in trait cannot be specialized
  --> $DIR/dont-project-to-specializable-projection.rs:16:5
   |
LL |     default async fn foo(_: T) -> &'static str {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: specialization behaves in inconsistent and surprising ways with `#![feature(async_fn_in_trait)]`, and for now is disallowed

error: aborting due to previous error

